feat: add independent wine line settings and safe group expansion